# SNACKAI-CoCo-Meshtastic

./: .gitignore  EXAMPLE_PROMPTS.md  MOBILE_README.md  README.md  check_device.py  cortex.sql  deploy_geospatial_sis.sql  deploy_sis.sh  generate_diagram.py  geospatial_dashboard.py  geospatial_dashboard_sis.py  interactive_dashboard.py  interactive_tables_setup.sql  live_map_dashboard.py  mcp_config.json  mcp_server.py  mcp_server_setup.sql  meshtastic_analysis.ipynb  meshtastic_interface.py  meshtastic_snowflake_streamer.py  mobile_dashboard.py  notes.txt  package-lock.json  pyproject.toml  requirements.txt  run.sh  semantic_view.sql  send_slack_test.py  snowflake_config.json.template  snowflake_ddl.sql  snowflake_jwt_auth.py  snowflake_mcp_setup.sql  snowflake_sql_client.py  snowpipe_streaming_client.py  snowpipe_streaming_v2_hp.md  snowpipe_streaming_v2_setup.sql  snowpipe_streaming_v2_validation.md  streamlit_app.py  test_packet_parsing.py  test_sensecap.py  (+1 more)
MeshtasticMobile/: DEPLOY_TO_IPHONE.md  Package.swift  README.md
MeshtasticMobile/MeshtasticMobile/: ContentView.swift  MeshtasticMobileApp.swift  SnowflakeService.swift
MeshtasticMobile/MeshtasticMobileTests/: MeshtasticMobileTests.swift
MeshtasticMobile/Scripts/: archive.sh  build.sh  deploy-device.sh  deploy.sh  test.sh
meshtastic-dashboard/: ARCHITECTURE.md  README.md  api_server.py  manage.sh  mqtt_consumer.py  package-lock.json  package.json  requirements.txt  validation.py
meshtastic-dashboard/public/: index.html
meshtastic-dashboard/server/: server.js
meshtastic-dashboard/src/: App.css  App.tsx
meshtastic-dashboard/tests/: test_api.py  test_mqtt.py  test_validation.py
tests/: __init__.py  test_meshtastic_streaming.py  test_streamlit_app.py  test_validation.py
